# Souce

./: LICENSE  README.md  auth.json  data.json  level.json  main.py  mescount.json  money.json  pyproject.toml  ライセンスファイルに付いて.txt
cogs/: NGwords.py  TTS.py  button.py  defult.py  level.py  messagecount.py  music.py  mychannels.py
